# mindsecretary

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  Dockerfile  README.md  SECURITY.md  docker-compose.yaml  pyproject.toml
.github/workflows/: docker-publish.yml  test.yml
config/: profile.yaml  settings.yaml
migrations/: 001_ephemeral_state.sql  002_events_alerted_at.sql  003_events_reflected_at.sql  README.md
scripts/: backup.sh  healthcheck.py  reembed.py
src/mindsecretary/: app.py
src/mindsecretary/core/: __init__.py  brain.py  config.py  database.py  enums.py  memory.py  prompt_safety.py
src/mindsecretary/integrations/: weather.py
src/mindsecretary/interfaces/: telegram.py
src/mindsecretary/learning/: mood.py  patterns.py  reflection.py  tracker.py
src/mindsecretary/llm/: client.py  prompts.py  router.py  tools.py
src/mindsecretary/proactive/: briefing.py  monitor.py  scheduler.py  smart_questions.py
src/mindsecretary/voice/: stt.py
tests/: conftest.py  test_brain.py  test_briefing.py  test_database.py  test_habits.py  test_integration.py  test_llm_client.py  test_memory_retry.py  test_monitor.py  test_mood.py  test_patterns.py  test_reflection.py  test_scheduler.py  test_smart_questions.py  test_telegram.py  test_timezone.py  test_tools.py  test_tools_datetime.py  test_weather.py
