[project]
name = "mindsecretary"
version = "0.14.21"
description = "Voice-first AI secretary — your external brain"
requires-python = ">=3.10"

dependencies = [
    "anthropic>=0.42.0",
    "groq>=0.11.0",
    "voyageai>=0.3.0",
    "numpy>=1.26.0",
    "python-telegram-bot>=21.0",
    "apscheduler>=3.10.0",
    "httpx>=0.27.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[project.scripts]
mindsecretary = "mindsecretary.app:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
